--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <base href="<%= APP_BASE %>">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title><%= APP_TITLE %></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- inject:css -->
-    <!-- endinject -->
+  <base href="<%= APP_BASE %>">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>
+    <%= APP_TITLE %>
+  </title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- inject:css -->
+  <!-- endinject -->
 </head>
+
 <body>
 
-    <sd-app>
-        <div class="spinner">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-        </div>
-    </sd-app>
+  <sd-app>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </sd-app>
 
-    <script>
-    // Fixes undefined module function in SystemJS bundle
-    function module() {}
+  <script>
+      // Fixes undefined module function in SystemJS bundle
+      function module() { }
 
     </script>
-    <script type="text/javascript" src="/node_modules/applicationinsights-js/dist/ai.js"></script>
+<script type="text/javascript" src="/assets/img/ai.js"></script>
 <script type="text/javascript">
-    var snippet = {
-        config: {
-            instrumentationKey: "17b22f89-9451-48ec-8e7b-1aed9b564d2b"
-        }
-    };
-    var init = new Microsoft.ApplicationInsights.Initialization(snippet);
-    var AppInsights = init.loadAppInsights();
+  var snippet = {
+    config: {
+      instrumentationKey: "17b22f89-9451-48ec-8e7b-1aed9b564d2b"
+    }
+  };
+  var init = new Microsoft.ApplicationInsights.Initialization(snippet);
+  var AppInsights = init.loadAppInsights();
 </script>
 
-    <!-- shims:js -->
-    <!-- endinject -->
+<!-- shims:js -->
+<!-- endinject -->
 
-    <% if (ENV === 'dev') { %>
-    <script src="<%= APP_BASE %>app/system-config.js"></script>
-    <% } %>
+<% if (ENV === 'dev') { %>
+  <script src="<%= APP_BASE %>app/system-config.js"></script>
+  <% } %>
 
     <!-- libs:js -->
     <!-- endinject -->
@@ -50,14 +54,15 @@
     <!-- endinject -->
 
     <% if (ENV === 'dev') { %>
-    <script>
-        System.import('<%= BOOTSTRAP_MODULE %>')
+      <script>
+      System.import('<%= BOOTSTRAP_MODULE %>')
         .catch(function (e) {
-            console.error(e,
-                'Report this error at https://github.com/mgechev/angular2-seed/issues');
+          console.error(e,
+            'Report this error at https://github.com/mgechev/angular2-seed/issues');
         });
     </script>
-    <% } %>
+<% } %>
 
-</body>
-</html>
+  </body>
+
+  </html>
